# langchain-rag-demo

./: .gitignore  DEMO_TALK_TRACK.md  README.md  app.py  audit.py  kb_loader.py  llm_client.py  rag.py  router.py  zbpack.json
.github/workflows/: ci.yml
interview-demo/ctbc-ai-assistant-demo/: DEMO_TALK_TRACK.md  README.md  config.py  pyproject.toml
interview-demo/ctbc-ai-assistant-demo/knowledge_base/: card-bill-inquiry.md
knowledge_base/: card-payment-methods.md  customer-service.md  digital-account-opening.md  interbank-transfer-fees.md
tests/: test_audit.py  test_rag.py  test_router.py
