[project]
name = "ctbc-ai-assistant-demo"
version = "0.1.0"
description = "Bank AI customer service PoC demo with LangChain RAG, risk routing, and audit log."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.25,<0.4.0",
    "langchain-community>=0.3.20,<0.4.0",
    "langchain-openai>=0.3.14,<0.4.0",
    "langchain-text-splitters>=0.3.8,<0.4.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.8.0,<3.0.0",
    "streamlit>=1.44.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
